Archive2/05/ab98b9b565e2b5/output
main.cpp: In function 'int check()':
main.cpp:18:5: error: redefinition of 'int check()'
 int check() {
     ^
main.cpp:1:5: note: 'int check()' previously defined here
 int check()
     ^
main.cpp:19:17: error: 'ar' was not declared in this scope
     int* view = ar;
                 ^
bash: line 8: ./a.out: No such file or directory
